@@ -1,4 +1,4 @@
-/* $Id: tty.c,v 1.36 2008-07-02 16:18:24 nicm Exp $ */
+/* $Id: tty.c,v 1.37 2008-07-23 23:44:50 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -569,24 +569,6 @@ tty_vwrite(struct tty *tty, struct screen *s, int cmd, va_list ap)
 	case TTY_INSERTOFF:
 		if (exit_insert_mode != NULL)
 			tty_puts(tty, exit_insert_mode);
-		break;
-	case TTY_KCURSOROFF:
-		t = tigetstr("CE");
-		if (t != (char *) 0 && t != (char *) -1)
-			tty_puts(tty, t);
-		break;
-	case TTY_KCURSORON:
-		t = tigetstr("CS");
-		if (t != (char *) 0 && t != (char *) -1)
-			tty_puts(tty, t);
-		break;
-	case TTY_KKEYPADOFF:
-		if (keypad_local != NULL)
-			tty_puts(tty, keypad_local);
-		break;
-	case TTY_KKEYPADON:
-		if (keypad_xmit != NULL)
-			tty_puts(tty, keypad_xmit);
 		break;
 #endif
 	case TTY_MOUSEOFF:
